force textarea size to prevent overlaping

--- a/app/assets/stylesheets/user_remarks/remark_tag.css.sass
+++ b/app/assets/stylesheets/user_remarks/remark_tag.css.sass
@@ -61,6 +61,7 @@
       margin-top: 10px
       textarea
         resize: none
+        height: 130px !important
       input
         width: 100%
     .remark-action
